src/include/c_api.h

    typedef uint16_t U16Char;
    typedef uint16_t U16Char;
/// @note General C API conventions in this file:
///   - editor_handle:   EditorCore handle (intptr_t) returned by create_editor
///   - document_handle: Document handle (intptr_t) returned by create_document_xxx
///   - out_size:        For all APIs that return binary payloads, this outputs the byte length
///   - Coordinate system: line / column are both 0-based
///   - Payload uses native byte order (LE). Caller must free it with free_binary_data
///   - These common rules are not repeated in each function comment

/// Text measurement callback set, passed when creating EditorCore
typedef struct {
    float (EDITOR_CALL* measure_text_width)(const U16Char* text, int32_t font_style);
    float (EDITOR_CALL* measure_inlay_hint_width)(const U16Char* text);
    float (EDITOR_CALL* measure_icon_width)(int32_t icon_id);
    void  (EDITOR_CALL* get_font_metrics)(float* arr, size_t length);
} text_measurer_t;
/// Create a Document and return its handle
/// @param text UTF8 text content
/// @return Document handle
EDITOR_API intptr_t create_document_from_utf8(const char* text);
/// Create a Document and return its handle
/// @param text UTF16 text content
/// @return Document handle
EDITOR_API intptr_t create_document_from_utf16(const U16Char* text);
/// Create a Document and return its handle(created from local file)
/// @param path Local file path
/// @return Document handle
EDITOR_API intptr_t create_document_from_file(const char* path);
/// Free Document
EDITOR_API void free_document(intptr_t document_handle);
/// Get Document UTF8 text
/// @return UTF8 text content
EDITOR_API const char* get_document_text(intptr_t document_handle);
/// Get total line count of Document
/// @return total line count of Document
EDITOR_API size_t get_document_line_count(intptr_t document_handle);
/// Get text of a specific Document line
/// @param line Line number
/// @return UTF16 text content of the specified line
EDITOR_API const U16Char* get_document_line_text(intptr_t document_handle, size_t line);
/// Create EditorCore and return its handle
/// @param measurer Text measurement callback set
/// @param options_data EditorOptions binary payload（LE byte order）:
///        f32 touch_slop         — Move threshold for a tap (default 10)
///        i64 double_tap_timeout — Time window for double tap (default 300ms)
///        i64 long_press_ms      — Long press threshold (default 500ms)
///        f32 fling_friction     — Fling friction coefficient (default 3.5)
///        f32 fling_min_velocity — Minimum fling velocity in px/s (default 50)
///        f32 fling_max_velocity — Maximum fling velocity in px/s (default 8000)
///        u64 max_undo_stack_size — Max undo stack depth, 0=unlimited (default 512)
///        i64 key_chord_timeout_ms — Key chord pending timeout in ms (default 2000)
/// @param options_size Byte length of options_data
/// @return EditorCore handle
EDITOR_API intptr_t create_editor(text_measurer_t measurer, const uint8_t* options_data, size_t options_size);
/// Free EditorCore
EDITOR_API void free_editor(intptr_t editor_handle);
/// Load Document
EDITOR_API void set_editor_document(intptr_t editor_handle, intptr_t document_handle);
/// Set editor viewport
/// @param width Editor view width
/// @param height Editor view height
EDITOR_API void set_editor_viewport(intptr_t editor_handle, int16_t width, int16_t height);
/// Notify editor that font metrics have changed (call after font/scale changes)
EDITOR_API void editor_on_font_metrics_changed(intptr_t editor_handle);
/// Set fold arrow display mode (affects reserved gutter width)
/// @param mode 0=AUTO(auto show when fold regions exist), 1=ALWAYS(always reserve), 2=HIDDEN(always hide)
EDITOR_API void editor_set_fold_arrow_mode(intptr_t editor_handle, int mode);
/// Set auto wrap mode
/// @param mode 0=NONE(no wrap), 1=CHAR_BREAK(character-level wrap), 2=WORD_BREAK(word-level wrap)
EDITOR_API void editor_set_wrap_mode(intptr_t editor_handle, int mode);
/// Set tab size (number of spaces per tab stop)
/// @param tab_size Tab size (default 4, minimum 1)
EDITOR_API void editor_set_tab_size(intptr_t editor_handle, int tab_size);
/// Set editor scale factor
/// @param scale Scale factor (1.0 = 100%)
EDITOR_API void editor_set_scale(intptr_t editor_handle, float scale);
/// Set line spacing parameters (formula: line_height = font_height * mult + add)
/// @param add Extra line spacing in pixels (default 0)
/// @param mult Line spacing multiplier (default 1.0)
EDITOR_API void editor_set_line_spacing(intptr_t editor_handle, float add, float mult);
/// Set extra horizontal padding between gutter split and text content start
/// @param padding Padding in pixels (clamped to >= 0)
EDITOR_API void editor_set_content_start_padding(intptr_t editor_handle, float padding);
/// Set whether to render gutter split line
/// @param show 0=hide, non-zero=show
EDITOR_API void editor_set_show_split_line(intptr_t editor_handle, int show);
/// Set current line render mode
/// @param mode 0=BACKGROUND(fill), 1=BORDER(stroke), 2=NONE(disabled)
EDITOR_API void editor_set_current_line_render_mode(intptr_t editor_handle, int mode);
/// Set whether gutter stays fixed during horizontal scroll
/// @param sticky 0=gutter scrolls with content (mobile style), non-zero=gutter fixed (desktop style)
EDITOR_API void editor_set_gutter_sticky(intptr_t editor_handle, int sticky);
/// Set whether gutter area is visible
/// @param visible 0=hide entire gutter, non-zero=show gutter
EDITOR_API void editor_set_gutter_visible(intptr_t editor_handle, int visible);
/// Set selection handle hit-test configuration using offset rects
/// @param start_left/start_top/start_right/start_bottom  Start handle hit area offset from cursor bottom anchor (handle tip)
/// @param end_left/end_top/end_right/end_bottom  End handle hit area offset from cursor bottom anchor (handle tip)
EDITOR_API void editor_set_handle_config(intptr_t editor_handle,
    float start_left, float start_top, float start_right, float start_bottom,
    float end_left, float end_top, float end_right, float end_bottom);
/// Set scrollbar full configuration (geometry + behavior)
/// @param thickness Scrollbar thickness in pixels
/// @param min_thumb Minimum scrollbar thumb length in pixels
/// @param thumb_hit_padding Extra thumb hit-test padding in pixels
/// @param mode 0=ALWAYS, 1=TRANSIENT, 2=NEVER
/// @param thumb_draggable 1=thumb drag enabled, 0=disabled
/// @param track_tap_mode 0=JUMP, 1=DISABLED
/// @param fade_delay_ms Delay before hide in TRANSIENT mode
/// @param fade_duration_ms Fade duration in TRANSIENT mode (used for both fade-in and fade-out)
EDITOR_API void editor_set_scrollbar_config(intptr_t editor_handle,
    float thickness, float min_thumb, float thumb_hit_padding,
    int mode, int thumb_draggable, int track_tap_mode,
    int fade_delay_ms, int fade_duration_ms);
/// Set custom key map from binary payload.
/// Payload format (LE byte order):
///   u32 binding_count
///   Repeat binding_count times:
///     u8  first_modifiers
///     u16 first_key_code
///     u8  second_modifiers
///     u16 second_key_code  (0 = single-chord)
///     u32 command          (EditorCommand enum value)
/// Invalid or empty payload is ignored (current key map is preserved).
EDITOR_API void editor_set_keymap(intptr_t editor_handle, const uint8_t* data, size_t size);