platform/Apple/Sources/SweetEditorBridge/include/SweetEditorBridge.h

void editor_set_insert_spaces(intptr_t editor_handle, int enabled);